--- a/.prettierrc
+++ b/.prettierrc
@@ -4,5 +4,14 @@
 	"semi": false,
 	"trailingComma": "es5",
 	"bracketSpacing": true,
-	"quoteProps": "as-needed"
+	"quoteProps": "as-needed",
+	"plugins": ["prettier-plugin-svelte"],
+	"overrides": [
+		{
+			"files": "*.svelte",
+			"options": {
+				"parser": "svelte"
+			}
+		}
+	]
 }
