--- a/engine/package.json
+++ b/engine/package.json
@@ -10,7 +10,11 @@
 	},
 	"devDependencies": {
 		"@cloudflare/workers-types": "^4.20240314.0",
+		"@types/xml2js": "^0.4.14",
 		"typescript": "^5.0.4",
 		"wrangler": "^3.0.0"
+	},
+	"dependencies": {
+		"xml2js": "^0.6.2"
 	}
 }
