--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,8 +7,6 @@
 		"preview": "npm run build && wrangler pages dev .svelte-kit/cloudflare",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-		"lint": "prettier --check .",
-		"format": "prettier --write .",
 		"deploy": "npm run build && wrangler pages deploy .svelte-kit/cloudflare",
 		"build-cf-types": "wrangler types && mv worker-configuration.d.ts src/"
 	},
@@ -19,17 +17,17 @@
 		"@sveltejs/adapter-cloudflare": "^4.2.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
-		"@types/eslint": "^8.56.0",
-		"@typescript-eslint/eslint-plugin": "^7.0.0",
-		"@typescript-eslint/parser": "^7.0.0",
+		"esbuild": "0.19.12",
 		"svelte": "^4.2.7",
 		"svelte-check": "^3.6.0",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
 		"vite": "^5.0.3",
-		"wrangler": "^3.34.2",
-		"esbuild": "0.19.12"
+		"wrangler": "^3.34.2"
 	},
 	"type": "module",
-	"license": "WTFPL"
+	"license": "WTFPL",
+	"dependencies": {
+		"jszip": "^3.10.1"
+	}
 }
