wip. Working WS connection, state skeleton

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,12 @@
 	},
 	"[json]": {
 		"editor.defaultFormatter": "esbenp.prettier-vscode"
-	}
+	},
+	"[svelte]": {
+		"editor.defaultFormatter": "svelte.svelte-vscode"
+	},
+	"[xml]": {
+		"editor.defaultFormatter": "redhat.vscode-xml"
+	},
+	"vitest.enable": true
 }
