--- a/engine/wrangler.toml
+++ b/engine/wrangler.toml
@@ -1,12 +1,17 @@
 name = "engine"
 main = "src/index.ts"
-compatibility_date = "2024-03-14"
+compatibility_date = "2024-03-04"
 
 
 [[durable_objects.bindings]]
 name = "JEOSHOW_GAME_STATE"
-class_name = "GameState"
+class_name = "GameDurableObject"
 
 [[migrations]]
 tag = "v1"
-new_classes = ["GameState"]
+new_classes = ["GameDurableObject"]
+
+
+[[r2_buckets]]
+binding = "JEOSHOW_PACKS"
+bucket_name = "jeoshow-packs"
