--- a/engine/package.json
+++ b/engine/package.json
@@ -4,17 +4,17 @@
 	"private": true,
 	"scripts": {
 		"deploy": "wrangler deploy",
-		"dev": "wrangler dev",
-		"start": "wrangler dev",
-		"check": "tsc --noEmit"
+		"dev": "wrangler dev --persist-to ../.wrangler/",
+		"check": "tsc --noEmit",
+		"test": "vitest"
 	},
 	"devDependencies": {
 		"@cloudflare/workers-types": "^4.20240314.0",
-		"@types/xml2js": "^0.4.14",
 		"typescript": "^5.0.4",
+		"vitest": "^1.4.0",
 		"wrangler": "^3.0.0"
 	},
 	"dependencies": {
-		"xml2js": "^0.6.2"
+		"fast-xml-parser": "^4.3.6"
 	}
 }
