wip reconnecting websocket, alarms, ready for hit

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
 	"type": "module",
 	"license": "WTFPL",
 	"dependencies": {
-		"jszip": "^3.10.1"
+		"jszip": "^3.10.1",
+		"partysocket": "^1.0.1"
 	}
 }
