--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,7 @@
 		"preview": "npm run build && wrangler pages dev .svelte-kit/cloudflare",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-		"deploy": "npm run build && wrangler pages deploy .svelte-kit/cloudflare",
+		"deploy": "npm run build -- --mode production && wrangler pages deploy .svelte-kit/cloudflare",
 		"build-cf-types": "wrangler types && mv worker-configuration.d.ts src/"
 	},
 	"devDependencies": {
