--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
 		"esbuild": "0.19.12",
 		"svelte": "^4.2.7",
 		"svelte-check": "^3.6.0",
+		"svelte-keydown": "^0.7.0",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
 		"vite": "^5.0.3",
