--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 	"devDependencies": {
 		"prettier": "^3.2.5",
 		"prettier-plugin-svelte": "^3.1.2",
+		"prettier-plugin-tailwindcss": "^0.5.13",
 		"svelte": "^4.2.7",
 		"vitest": "^1.4.0"
 	}
