working telegram bot handler

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,17 +8,21 @@
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"deploy": "npm run build -- --mode production && wrangler pages deploy .svelte-kit/cloudflare",
-		"build-cf-types": "wrangler types && mv worker-configuration.d.ts src/"
+		"build-cf-types": "wrangler types && mv worker-configuration.d.ts src/",
+		"setup-webhook": "node scripts/setup-tg-webhook.mjs"
 	},
 	"devDependencies": {
 		"@cloudflare/workers-types": "^4.20240314.0",
+		"@grammyjs/types": "^3.5.2",
 		"@neoconfetti/svelte": "^1.0.0",
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/adapter-cloudflare": "^4.2.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"autoprefixer": "^10.4.19",
+		"dotenv": "^16.4.5",
 		"esbuild": "0.19.12",
+		"node-fetch": "^3.3.2",
 		"postcss": "^8.4.38",
 		"svelte": "^4.2.7",
 		"svelte-check": "^3.6.0",
@@ -33,9 +37,9 @@
 	"type": "module",
 	"license": "WTFPL",
 	"dependencies": {
-		"tailwind-merge": "^2.2.2",
 		"clsx": "^2.1.0",
 		"jszip": "^3.10.1",
-		"partysocket": "^1.0.1"
+		"partysocket": "^1.0.1",
+		"tailwind-merge": "^2.2.2"
 	}
 }
