--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,6 +37,7 @@
 	"type": "module",
 	"license": "WTFPL",
 	"dependencies": {
+		"@twa-dev/sdk": "^7.0.0",
 		"clsx": "^2.1.0",
 		"jszip": "^3.10.1",
 		"partysocket": "^1.0.1",
