--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
 	"version": "1.0.0",
 	"scripts": {
 		"check": "cd engine && yarn run check && cd ../frontend && yarn run check",
-		"format": "prettier --write ."
+		"format": "prettier --write .",
+		"cf-dev": "concurrently \"cd engine && yarn run dev\" \"cd frontend && yarn run dev --mode cf-dev\" \"cloudflared tunnel run\""
 	},
 	"devDependencies": {
+		"concurrently": "^8.2.2",
 		"prettier": "^3.2.5",
 		"prettier-plugin-svelte": "^3.1.2",
 		"prettier-plugin-tailwindcss": "^0.5.13",
