--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
 		"postcss": "^8.4.38",
 		"svelte": "^4.2.7",
 		"svelte-check": "^3.6.0",
+		"svelte-confetti": "^1.4.0",
 		"svelte-keydown": "^0.7.0",
 		"tailwind-safe-container": "^1.0.0",
 		"tailwindcss": "^3.4.3",
