--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
 	"name": "jeoshow",
 	"version": "1.0.0",
 	"scripts": {
-		"check": "cd engine && yarn run check && cd ../frontend && yarn run check",
+		"check": "concurrently \"cd engine && yarn run check\" \"cd frontend && yarn run check\"",
+		"deploy": "concurrently \"cd engine && yarn run deploy\" \"cd frontend && yarn run deploy\"",
 		"format": "prettier --write .",
 		"cf-dev": "concurrently \"cd engine && yarn run dev\" \"cd frontend && yarn run dev --mode cf-dev\" \"cloudflared tunnel run\""
 	},
