--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,6 +42,7 @@
 		"clsx": "^2.1.0",
 		"jszip": "^3.10.1",
 		"partysocket": "^1.0.1",
+		"posthog-js": "^1.137.0",
 		"tailwind-merge": "^2.2.2"
 	}
 }
