--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
 		"prettier-plugin-tailwindcss": "^0.5.13",
 		"svelte": "^4.2.7",
 		"vitest": "^1.4.0"
+	},
+	"dependencies": {
+		"posthog-node": "^4.0.1"
 	}
 }
