--- a/frontend/wrangler.toml
+++ b/frontend/wrangler.toml
@@ -1,7 +1,8 @@
-name = "frontend"
-compatibility_date = "2024-03-14"
+name = "jeoshow-fe"
+compatibility_date = "2024-09-23"
+compatibility_flags = [ "nodejs_compat" ]
 
-tail_consumers = [{service = "tail-worker"}]
+pages_build_output_dir = ".svelte-kit/cloudflare"
 
 [[r2_buckets]]
 binding = "JEOSHOW_PACKS"
